css/main.css
/* ... */
.schedule-select-container{
	width: 120px;
	float: left;
	margin: 0 0 0 28px;
	font-size: 12px;
	position: relative;
}

.schedule-from-select-container.schedule-select-disabled::after{
	content: '';
	display: block;
	width: 10px;
	height: 1px;
	background-color: #aaa;
	position: absolute;
	right: 12%;
	top: 15px;
}

.schedule-day-btns{
	width: 38px;
	height: 32px;
	float: right;
	font-size: 14px;
	line-height: 32px;
	color: #ec910e;
	text-align: center;
	position: relative;
}

.schedule-day-btn{
	display: block;
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	cursor: pointer;
	transition: opacity .3s ease, transform .3s ease;
}

.schedule-day-btn.hidden{
	opacity: 0;
	transform: scale(0);
	pointer-events: none;
}

.schedule-select-container.schedule-select-disabled .ui.selection.dropdown{
	background-color: transparent;
	border-color: transparent;
	pointer-events: none;
}

.schedule-select-container.schedule-select-disabled .dropdown.icon{
	display: none;
}

.another-disable{
	opacity: .5;
	pointer-events: none;
	filter: grayscale(1);
	user-select: none;
}

.ui.form .field.half-width{
	width: 266px;
	margin: 0 26px 14px 0;
	clear: none;
}

.ui.form .field.half-width-float{
	float: left;
}

.ui.form .field.half-width-float:last-of-type{
	margin: 0 0 14px 0;
}

.pay-card-checkboxes-list{
	margin: 8px 0 0 0;
}

.pay-card-checkboxes-list.hidden{
	display: none;
}

.pay-card-checkboxes-list > li{
	display: inline-block;
	vertical-align: top;
	font-size: 9px;
	text-align: center;
	position: relative;
	overflow: hidden;
	margin: 0 18px 0 0;
}

.pay-card-checkboxes-list > li label{
	display: block;
	opacity: .5;
	filter: grayscale(1);
	cursor: pointer;
	transition: opacity .3s ease, filter .3s ease;
}

.pay-card-checkboxes-list > li label:hover{
	opacity: .8;
}

.pay-card-checkboxes-list > li input:checked + label{
	opacity: 1;
	filter: grayscale(0);
}

.pay-card-checkboxes-list > li label > img{
	display: block;
	height: 30px;
	width: auto;
	margin: 0 auto 5px auto;
}

.pay-card-checkboxes-list > li label > span{
	display: block;
}

.pay-card-checkboxes-list > li input{
	display: block;
	position: absolute;
	left: 0;
	top: 0;
	pointer-events: none;
	opacity: 0;
}

.ui.label.only-icon>.icon{
	margin: 0;
}

.ui.labeled.input:not([class*="corner labeled"]) .label:first-child+input:focus{
	border-left-color: rgba(34,36,38,.3);
}

i.icon.popup-heading-icon{
	color: #aaa;
	margin: 0 0 0 5px;
	cursor: pointer;
	transition: color .3s ease;
}

i.icon.popup-heading-icon:hover{
	color: #ec910e;
}

.fields-heading .ui.wide.popup{
	min-width: 300px;
}

.fields-block-nomargin{
	margin: 0;
}

.main-form-buttons{
	margin: 20px 0 0 0;
}

.upload-place-avatar-btn{
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
	height: 100%;
	color: #fff;
	font-size: 12px;
	border-radius: 4px;
	overflow: hidden;
}

.profile-avatar-container:hover .upload-place-avatar-btn{
	transform: translateY(0);
}

.place-avatar-btn{
	opacity: 0;
	pointer-events: none;
	position: absolute;
	top: -9999px;
	left: -9999px;
}

.upload-place-avatar-btn label{
	display: block;
	width: 100%;
	height: 100%;
	cursor: pointer;
	position: absolute;
	top: 0;
	left: 0;
}

.place-avatar-upload-text{
	position: absolute;
	bottom: 0;
	left: 0;
	padding: 10px;
	background-color: rgba(0,0,0,.7);
	width: 100%;
	transform: translateY(100%);
	transition: transform .3s ease;
}

.upload-place-avatar-btn label:hover .place-avatar-upload-text{
	transform: translateY(0);
}

.place-avatar-cropper-wrap{
	width: 100%;
	height: 500px;
}

.cr-boundary{
	border-radius: 4px;
}

